application.properties の初期設定を追加し、runできるようにした

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+## linebot
+line.bot.channel-token=your-channel-key
+line.bot.channel-secret=your-secret-key
+handler.path=/callback
 
+## thymeleaf
+spring.thymeleaf.mode=HTML
+logging.level.org.springframework.jdbc.core=trace
