プロパティファイルを修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## linebot
 line.bot.channel-token=your-channel-key
 line.bot.channel-secret=your-secret-key
-handler.path=/callback
+line.bot.handler.path=/callback
 
 ## thymeleaf
 spring.thymeleaf.mode=HTML
